@@ -1,2 +1,1 @@
-DIST pypubsub-3.4.2.tar.gz 169226 SHA256 105b5779e836058d5deb788413f5a3a60958445d1795cf176b899a4dfbe9a0a7 SHA512 02b3b3e3bfd864606264dca8cb1730f6b2ef94552d888f777f1fc289ba5c39f87af584a7f44b50c34f15f9c89fd09c57c8ed78f2043981cf9e0f8af40d2b96b3 WHIRLPOOL 18c0689f31a063f5fe04f6efbbd718577d2cb0c54f55322fc12adcfdacda31ff394fe4455a1e1cc2584c662809d1199aa1a63a7fb84bb604a8639b13bc4a7a04
 DIST pypubsub-4.0.3.tar.gz 174033 SHA256 0df83daa1cb0021bab858ff6812d836c9712dea59a5172be1888bb554c3a89a2 SHA512 cf9aca44e91a5d0e5ecf6739deabf2980f9464395c89e3c5335c5248e47c570701e0534bb660c5005325a994d9f8e7f261f36bc8bea74cfc7eb760b73c572652 WHIRLPOOL 706ddf8e86c432f6b7ebbae5a74547b2d54bbae1a04dcf238c96cc90800c2e44c2d35bc14e0e5efa0eb2594a6a2b4167428d28fc9cc72c598eb3e5254e0f3fd3
