@@ -1,9 +1,9 @@
-# Copyright 1999-2019 Gentoo Authors
+# Copyright 1999-2020 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI=7
 
-PYTHON_COMPAT=( python3_{4,5,6,7} )
+PYTHON_COMPAT=( python3_{6,7,8} )
 
 inherit distutils-r1
 
@@ -14,12 +14,12 @@ SRC_URI="
 	"
 
 LICENSE="BSD"
-SLOT="4"
+SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="test"
 
 DEPEND="test? (	dev-python/pytest[${PYTHON_USEDEP}] )"
-RDEPEND="virtual/python-pathlib[${PYTHON_USEDEP}]"
+RDEPEND=""
 
 python_test() {
 	distutils_install_for_testing
