@@ -1,3 +1,6 @@
+  12 May 2020;  <chymera@gentoo.org> pypubsub-4.0.3.ebuild:
+  dev-python/pypubsub: corrected SLOT and deprecated dep
+
 *pypubsub-4.0.3 (18 Mar 2019)
 
   18 Mar 2019; Horea Christian <h.chr@mail.ru> +pypubsub-4.0.3.ebuild,
